--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,10 @@
   font-size: 16px !important;
 }
 
+.css-314rep {
+  display: none !important;
+}
+
 .css-19wsa2m-MuiButtonBase-root-MuiTab-root.Mui-selected,
 .css-9gnw14.Mui-selected {
   color: black !important;
