--- a/src/App.css
+++ b/src/App.css
@@ -183,11 +183,14 @@
   }
 
   .css-19wsa2m-MuiButtonBase-root-MuiTab-root.Mui-selected,
-  .css-19wsa2m-MuiButtonBase-root-MuiTab-root {
+  .css-19wsa2m-MuiButtonBase-root-MuiTab-root,
+  .css-9gnw14.Mui-selected,
+  .css-9gnw14 {
     font-size: 14px !important;
   }
 
-  .css-heg063-MuiTabs-flexContainer {
+  .css-heg063-MuiTabs-flexContainer,
+  .css-k008qs {
     flex-direction: column;
     align-items: start;
   }
